--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,96 @@
 ---
+import Figure from "./Figure.astro";
+import SocialMedia from "./SocialMedia.astro";
+const menuItems = ["About", "Services", "Projects"];
 ---
 
-<footer>
-    <section>
-        <article>
-            <div>sunnyside</div>
-            <nav>About Services Projects</nav>
-            <nav>Contact</nav>
+<footer class="flex-column justify-center items-center">
+    <section class="contact">
+        <article class="flex-column justify-center items-center">
+            <div class="logo-container">
+                <Figure name="logo" />
+            </div>
+            <nav>{menuItems.map((item) => <a href="#">{item}</a>)}</nav>
+            <nav class="nav-social"><SocialMedia /></nav>
         </article>
     </section>
-    <section>
-        <article class="attribution">
-            Challenge by <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank">Frontend Mentor</a
-            >. Coded by <a href="#">Jose Monge</a>.
+    <section class="attribution">
+        <article class="flex-column justify-center items-center">
+            <span>
+                Challenge by <a
+                    href="https://www.frontendmentor.io?ref=challenge"
+                    target="_blank">Frontend Mentor</a
+                >.
+            </span>
+            <span>
+                Coded by <a href="#">Jose Monge</a>.
+            </span>
         </article>
     </section>
 </footer>
+
+<style lang="css">
+    footer {
+        width: 100%;
+        height: 350px;
+    }
+
+    section {
+        width: 100%;
+        height: 350px;
+    }
+
+    article {
+        height: 100%;
+    }
+
+    .contact {
+        padding-block: 72px;
+        background-color: var(--light-cyan);
+    }
+
+    nav {
+        margin-top: 40px;
+        display: flex;
+        gap: 57px;
+    }
+
+    .logo-container {
+        fill: var(--dark-cyan);
+    }
+    .logo-container {
+        transform: scale(1.37);
+    }
+
+    .contact a {
+        color: var(--light-moderate-cyan);
+        text-decoration: none;
+    }
+
+    .contact a:hover {
+        color: white;
+    }
+
+    .nav-social {
+        fill: #2c7566;
+    }
+    .attribution {
+        padding-block: 20px;
+        color: var(--dark-moderate-cyan);
+        background-color: var(--dark-desaturated-cyan);
+    }
+
+    .attribution a {
+        color: white;
+        text-decoration: none;
+    }
+    .attribution a:hover {
+        color: var(--light-cyan);
+    }
+
+    article {
+    }
+
+    @media (min-width: 1440px) {
+    }
+</style>
