--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -75,12 +75,13 @@
 
     div {
         margin-top: 81px;
-        gap: 30px;
     }
     section > div {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
+        gap: 64px;
     }
 
     h3 {
@@ -117,5 +118,12 @@
 
     footer {
         text-align: center;
+    }
+
+    @media (min-width: 1440px) {
+        section > div {
+            flex-direction: row;
+            gap: 30px;
+        }
     }
 </style>
