Fixed broken link on author's personal site

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,7 +23,7 @@ const menuItems = ["About", "Services", "Projects"];
                 >.
             </span>
             <span>
-                Coded by <a href="#">Jose Monge</a>.
+                Coded by <a href="https://josemonge.dev">Jose Monge</a>.
             </span>
         </article>
     </section>
