Changed white background to yellowish-white for cards and testimonials Changed letter spacing for testimonials header Centered content on higher resolutions than 1440px

--- a/src/components/ImageBox.astro
+++ b/src/components/ImageBox.astro
@@ -20,6 +20,7 @@ const { shortName, alt } = Astro.props as Props;
 <style>
     picture {
         width: 100%;
+        overflow: hidden;
     }
 
     picture > * {
