--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,12 +23,10 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 
 <style>
-	.attribution {
-		font-size: 11px;
-		text-align: center;
-	}
-
-	.attribution a {
-		color: hsl(228, 45%, 44%);
+	main {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 	}
 </style>
