--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -55,8 +55,12 @@ const yellow = "hsl(51, 100%, 49%);";
 
 <style>
     section {
+        width: 100%;
+
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     @media (min-width: 1440px) {
