--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -62,6 +62,8 @@
 
 <style>
     section {
+        background-color: var(--white-yellow-tint);
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -88,6 +90,7 @@
         text-transform: uppercase;
         font-size: var(--fs-300);
         color: var(--grayish-blue);
+        letter-spacing: 5px;
     }
 
     article {
