Fixed wrong width on divs under section tag on Services component that rendered incorrect width under each subcomponent

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -63,6 +63,10 @@ const yellow = "hsl(51, 100%, 49%);";
         align-items: center;
     }
 
+    section > div {
+        width: 100%;
+    }
+
     @media (min-width: 1440px) {
         .card-1 {
             order: 2;
