Instagram link on social media component corrected

--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -7,7 +7,7 @@ const iconItems = [
     },
     {
         icon: "icon-instagram",
-        url: "https://instagram.io",
+        url: "https://instagram.com",
     },
     {
         icon: "icon-pinterest",
